--- a/testng-databinding-text/pom.xml
+++ b/testng-databinding-text/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>testng-databinding</artifactId>
 		<groupId>net.sf.testngdatabind</groupId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 	<artifactId>testng-databinding-text</artifactId>
 	<name>TestNG DataBinding Text</name>
@@ -13,7 +12,7 @@
 		<dependency>
 			<groupId>net.sf.testngdatabind</groupId>
 			<artifactId>testng-databinding-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 </project>
