--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>net.sf.testngdatabind</groupId>
 	<artifactId>testng-databinding</artifactId>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.0</version>
 	<packaging>pom</packaging>
 	<name>TestNG DataBinding Parent POM</name>
 	<description>Parent POM for a data binding framework targeting TestNG</description>
@@ -21,9 +21,9 @@
 	</licenses>
 	<inceptionYear>2010</inceptionYear>
 	<scm>
-		<connection>scm:svn:http://svn.code.sf.net/p/testngdatabind/code/trunk</connection>
-		<developerConnection>scm:svn:https://svn.code.sf.net/p/testngdatabind/code/trunk</developerConnection>
-		<url>https://sourceforge.net/p/testngdatabind/code/</url>
+		<connection>scm:svn:http://svn.code.sf.net/p/testngdatabind/code/tags/testng-databinding-2.0</connection>
+		<developerConnection>scm:svn:https://svn.code.sf.net/p/testngdatabind/code/tags/testng-databinding-2.0</developerConnection>
+		<url>https://sourceforge.net/p/testngdatabind/code/tags/testng-databinding-2.0</url>
 	</scm>
 	<developers>
 		<developer>
