--- a/trunk/testng-databinding-text/pom.xml
+++ b/trunk/testng-databinding-text/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>testng-databinding</artifactId>
 		<groupId>net.sf.testngdatabind</groupId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 	<artifactId>testng-databinding-text</artifactId>
 	<name>TestNG DataBinding Text</name>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>net.sf.testngdatabind</groupId>
 			<artifactId>testng-databinding-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 </project>
