--- a/testng-databinding-core/pom.xml
+++ b/testng-databinding-core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.sf.testngdatabind</groupId>
 		<artifactId>testng-databinding</artifactId>
-		<version>2.1-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>testng-databinding-core</artifactId>
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>net.sf.testngdatabind</groupId>
 			<artifactId>testng-databinding-util</artifactId>
-			<version>2.1-SNAPSHOT</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>net.sf.extcos</groupId>
 			<artifactId>extcos</artifactId>
-			<version>0.4b</version>
+			<version>0.5.3</version>
 		</dependency>
 	</dependencies>
 </project>
