--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>net.sf.testngdatabind</groupId>
 	<artifactId>testng-databinding</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<packaging>pom</packaging>
 	<name>TestNG DataBinding Parent POM</name>
 	<description>Parent POM for a data binding framework targeting TestNG</description>
@@ -48,7 +48,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
+				<version>2.10.2</version>
 				<configuration>
 					<doctitle>${javadoc.title}</doctitle>
 					<windowtitle>${javadoc.title}</windowtitle>
@@ -63,6 +63,7 @@
 						</group>
 					</groups>
 					<overview>src/javadoc/overview-summary.html</overview>
+	                <additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 			</plugin>
 		</plugins>
