--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.testngdatabind</groupId>
 	<artifactId>testng-databinding</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<packaging>pom</packaging>
 	<name>TestNG DataBinding Parent POM</name>
 	<description>Parent POM for a data binding framework targeting TestNG</description>
@@ -22,7 +20,8 @@
 		<developerConnection>
 			scm:git:https://github.cm/mimarox/testng-databinding.git</developerConnection>
 		<url>https://github.com/mimarox/testng-databinding</url>
-	</scm>
+	  <tag>testng-databinding-3.0.0</tag>
+  </scm>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
@@ -146,8 +145,7 @@
 								<configuration>
 									<failOnError>true</failOnError>
 									<target>
-										<exec executable="cmd" dir="."
-											spawn="false">
+										<exec executable="cmd" dir="." spawn="false">
 											<arg value="/c" />
 											<arg value="mvn.bat" />
 											<arg value="clean" />
@@ -156,9 +154,7 @@
 											<arg value="javadoc:aggregate" />
 											<arg value="-DperformRelease=true" />
 										</exec>
-										<exec executable="cmd"
-											dir="./testng-databinding-delivery"
-											spawn="false">
+										<exec executable="cmd" dir="./testng-databinding-delivery" spawn="false">
 											<arg value="/c" />
 											<arg value="mvn.bat" />
 											<arg value="assembly:single" />
